<resources>
    <string name="app_name">My Recipes</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_account">New \nAccount</string>
    <string name="name">Name</string>
    <string name="type_your_password">Type your password</string>
    <string name="type_your_name">Type your name</string>
    <string name="type_your_email">Type your e mail</string>
    <string name="failed_to_register">Failed to register</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="logout">Log out</string>
    <string name="categories">Categories</string>
    <string name="drinks">Drinks</string>
    <string name="pasta">Pasta</string>
    <string name="cakes_and_pies">Cakes and Pies</string>
    <string name="desserts">Desserts</string>
    <string name="salads_and_sauces">Salads and Sauces</string>
    <string name="meats">Meats</string>
    <string name="fish_and_seafood">Fish and Seafood</string>
    <string name="soups">Soups</string>
    <string name="snacks">Snacks</string>
    <string name="other">Other</string>
    <string name="latest_saved">Latest saved</string>
    <string name="latest_recipe">latest recipe</string>
</resources>